# ICg-CaST

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: api.md  benchmark.md  bottleneck.md  calibration.md  cli.md  coefficients.md  conf.py  data_sources.md  ethics_and_limitations.md  index.md  manuscript_differentiation_section.md  manuscript_results_section.md  quickstart.md  requirements.txt  simulation.md  streamlit_app.md  theory.md  validation.md
examples/: run_calibration.py  run_demo.sh  run_icg_bench.py
materials/: calibration_provenance.schema.json  chemical_archetypes.csv  coefficient_cards.yaml  coefficient_review.csv  data_dictionary.csv  dataset_manifest.csv  intervention_dictionary.csv  kcc_to_aop_mapping.csv  provenance_template.json
notebooks/: ICg_CaST_results.ipynb
scripts/: bottleneck_proof_of_concept.py  build_results_notebook.py  render_manuscript_plots.py
src/icg_cast/: __init__.py  __main__.py  _branding.py  bottleneck.py  cli.py  cli_coeffs.py  cli_milestone10.py  config.py  constants.py  counterfactuals.py  graph.py  interventions.py  io.py  models.py  omics.py  plotting.py  signatures.py  simulator.py  simulator_milestone9.py  streamlit_app.py  survival.py
src/icg_cast/audit/: __init__.py  coefficient_sensitivity.py  (+2 more)
tests/: test_bottleneck.py  test_calibration.py  test_cli_smoke.py  test_coefficient_registry.py  test_conformity_bootstrap.py  test_counterfactuals.py  test_data_source_stubs.py  test_graph.py  test_imports.py  test_io.py  test_leaderboard_schema.py  test_milestones_11_13.py  test_models.py  test_omics.py  test_properties.py  test_reference_risk_oracle.py  test_signatures.py  test_simulator.py  test_survival.py  test_validation.py
(+41 files in other folders)
