[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icg-cast"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ICg-CaST contributors"},
]
license = "Apache-2.0"
keywords = [
    "carcinogenomics", "causal-inference", "qaop",
    "key-characteristics-of-carcinogens", "mb-cnet", "multi-omics",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.4",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "myst-parser[linkify]>=2.0",
]
app = [
    "streamlit>=1.36",
]

[project.scripts]
icg-cast = "icg_cast.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

# Version and one-line description are sourced from the single branding
# module so a rebrand only requires editing src/icg_cast/_branding.py.
[tool.setuptools.dynamic]
version = {attr = "icg_cast._branding.VERSION"}
description = {attr = "icg_cast._branding.PROJECT_TAGLINE"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["icg_cast*"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    ".continue",
    ".pytest_cache",
    ".ruff_cache",
    "outputs",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "E741"]
